[project]
name = "get-pull-request-comments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "datetime>=5.5",
    "markdown>=3.8.2",
    "openai>=1.101.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]
